--- a/index.html
+++ b/index.html
@@ -35,4 +35,4 @@ if(urlParams.has('score_text')){
 <a href="#" onclick="history.back()">Click here to go back</a>
 
 <!-- alltime/month (top 25 + total) -->
-<!-- name/score/comment -->
+<!-- name/score/comment/date -->
