--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ function atol(a){
 }
 function dgoh(d,main,sum){
 	document.body.innerHTML+="<br><h3>"+main+" Top</h3>";
-	let table="<table style='border:1px solid'><tr><th>Name</th><th>Score</th><th>Date</th><th>Comment</th></tr>";
+	let table="<table style='border:1px solid'><tr><th></th><th>Name</th><th>Score</th><th>Date</th><th>Comment</th></tr>";
 	for(let i=0;i<d.length;i++){
 		const x=d[i];
-		table+="<tr><td>"+x.name+"</td><td>"+x.score.toString()+"</td><td>"+x.time.toString()+"</td><td>"+x.comment+"</td></tr>";
+		table+="<tr><td>"+(i+1)+"</td><td>"+x.name+"</td><td>"+x.score.toString()+"</td><td>"+x.time.toString()+"</td><td>"+x.comment+"</td></tr>";
 	}
 	document.body.innerHTML+=table+"</table>";
 	document.body.innerHTML+="<p>Total entries: "+sum.toString()+"</p>";
