--- a/full.html
+++ b/full.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <body style="background-color: #101010; color: #ffffff;"><!-- kongregate is always black -->
 
 <a href="#" onclick="history.back()">Click here to go back</a>
