view mode and that text

--- a/full.html
+++ b/full.html
@@ -116,7 +116,7 @@ if(urlParams.has('game_name')){
 			}
 		})
 		info.innerText="Score sent: "+score;
-	}
+	}else info.innerText="";
 	const el=document.createElement("p");
 	const el2=document.createElement("button");
 	el2.innerText="Click here to refresh";
